# cpp-deserializer

./: CMakeLists.txt  readme.md
src/: Serializator.cpp  main.cpp  serializator.h  test_main.cpp
src/types/: Buffer.h  SerializableValue.h  any.h  common.h  float.h  integer.h  serializator.h  string.h  vector.h
